* PRD-4622 Showing Page 1/1 the first execution of paginated html report even when there are more than 1 pages. ** Revert change by mdamour in rev.51776 ** Restored INITIAL second call to "reporting" with renderMode=XML, and auto-submit=true. ** Restored a call to "reporting" with renderMode=XML, when on MANUAL and auto-submit=false. ** Made the glasspane survive on through multiple consecutive requests. * Fixed CSS position of off screen content (for size polling reasons). CSS measures did not have a unit specified, resulting in strange interactions with other css properties (namely: body { height:100% }) * Fixed sending of multiple valued parameters to the service "reporting" (they were not being encoded the traditional way; see jQuery.param()). This resulted in that the changes made to the values by the user were ignored.
git-svn-id: svn://source.pentaho.org/svnroot/archive/platform-plugins/reporting-plugin/branches/4.8@52273 5d404267-db13-0410-8476-b1f6b398e63a

--- a/package-res/reportviewer/reportviewer.css
+++ b/package-res/reportviewer/reportviewer.css
@@ -84,8 +84,8 @@ div.prompt-panel {
 */
 .contentHidden #reportArea {
 	position: absolute;
-	left: -100000;
-    top:  -100000;
+  left: -100000px;
+  top:  -100000px;
 }
 
 .styled #reportArea {
